--- a/project.config.json
+++ b/project.config.json
@@ -9,9 +9,11 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.1",
-	"appid": "wx2e7e288d50dcf1ca",
+	"appid": "wxd360f5c782ff94ea",
 	"projectname": "Hongmi",
 	"isGameTourist": false,
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
