--- a/app.json
+++ b/app.json
@@ -1,47 +1,62 @@
 {
-    "pages": [
-
-        "pages/index/index",
-        "pages/person/index",
-        "pages/activity/search/index",
-        "pages/activity/member/index",
-        "pages/activity/details/index",
-        "pages/activity/audit/index",
-        "pages/activity/change_act/index",
-        "pages/activity/share_success/index",
-        "pages/publish/index",
-        "pages/webview/index",
-        "pages/publish/publish_success/index"
-    ],
-    "window": {
-        "backgroundTextStyle": "dark",
-        "navigationBarBackgroundColor": "#FED612",
-        "navigationBarTitleText": "HOMIE",
-        "navigationBarTextStyle": "black",
-        "backgroundColor":"#FED612",
-        "enablePullDownRefresh":true
-    },
-    "tabBar": {
-        "selectedColor": "#FED612",
-        "list": [
-            {
-                "pagePath": "pages/index/index",
-                "iconPath": "img/home.png",
-                "selectedIconPath": "img/home1.png",
-                "text":"发现"
-            },
-            {
-                "pagePath": "pages/publish/index",
-                "iconPath": "img/center.png",
-                "selectedIconPath": "img/center1.png",
-                "text": "发布"
-            },
-            {
-                "pagePath": "pages/person/index",
-                "iconPath": "img/person.png",
-                "selectedIconPath": "img/person1.png",
-                "text": "我的"
-            }
-        ]
+  "pages": [
+    "pages/index/index",
+    "pages/person/index",
+    "pages/activity/search/index",
+    "pages/activity/member/index",
+    "pages/activity/details/index",
+    "pages/activity/change_act/index",
+    "pages/activity/share_success/index",
+    "pages/publish/index",
+    "pages/webview/index",
+    "pages/publish/publish_success/index",
+    "pages/activity/audit/index",
+    "pages/society/society",
+    "pages/answer/answer",
+    "pages/team/team",
+    "pages/activity/match_details/match"
+  ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
     }
+  },
+  "window": {
+    "backgroundTextStyle": "dark",
+    "navigationBarBackgroundColor": "#FED612",
+    "navigationBarTitleText": "竞赛宝",
+    "navigationBarTextStyle": "black",
+    "backgroundColor": "#FED612",
+    "enablePullDownRefresh": true
+  },
+  "tabBar": {
+    "selectedColor": "#FED612",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "iconPath": "img/home.png",
+        "selectedIconPath": "img/home1.png",
+        "text": "发现"
+      },
+      {
+        "pagePath": "pages/society/society",
+        "iconPath": "img/society.png",
+        "selectedIconPath": "img/society1.png",
+        "text": "社区"
+      },
+      {
+        "pagePath": "pages/publish/index",
+        "iconPath": "img/center.png",
+        "selectedIconPath": "img/center1.png",
+        "text": "发布"
+      },
+      {
+        "pagePath": "pages/person/index",
+        "iconPath": "img/person.png",
+        "selectedIconPath": "img/person1.png",
+        "text": "我的"
+      }
+    ]
+  },
+  "sitemapLocation": "sitemap.json"
 }
